Fix sidenav layout issues on the homepage

--- a/luckybreak/static/less/homepage.less
+++ b/luckybreak/static/less/homepage.less
@@ -1,12 +1,15 @@
 @font_colour: #424242;
 
 body.homepage {
+  #sidenav-overlay {
+    display: none;
+  }
   nav {
     &.top {
       background-color: transparent !important;
       box-shadow: none;
 
-      a {
+      .brand-logo, .hide-on-med-and-down a {
         color: #eeeeee;
 
         &:hover {
